--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = ""
 authors = [
     {name = "Jeremy Reichman", email = "jaharmi@jaharmi.com"},
 ]
-dependencies = []
+dependencies = [
+    "Sphinx>=5.3.0",
+]
 requires-python = ">=3.11"
 license = {text = "None"}
 
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
+
+[tool.pdm]
