--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "Sphinx>=5.3.0",
+    "livereload>=2.6.3",
 ]
 requires-python = ">=3.11"
 license = {text = "None"}
