--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "Sphinx>=5.3.0",
     "livereload>=2.6.3",
+    "myst-parser>=0.18.1",
 ]
 requires-python = ">=3.11"
 license = {text = "None"}
