--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "Sphinx>=5.3.0",
     "livereload>=2.6.3",
     "myst-parser>=0.18.1",
+    "ablog>=0.10.30",
 ]
 requires-python = ">=3.11"
 license = {text = "None"}
