--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "livereload>=2.6.3",
     "myst-parser>=0.18.1",
     "ablog>=0.10.30",
+    "furo>=2022.9.29",
 ]
 requires-python = ">=3.11"
 license = {text = "None"}
